--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">PiP demo</string>
     <string name="gif_activity_name">GIF Viewer</string>
     <string name="action_settings">Settings</string>
+    <string name="content_description_gif">GIF</string>
+    <string name="content_description_play_pause">Play / Pause</string>
 </resources>
