--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="content_description_enter_pip">Enter picture in picture mode</string>
     <string name="content_description_pause">Pause</string>
     <string name="content_description_play">Play</string>
+    <string name="content_description_random">Random</string>
 </resources>
