Added another Activity that can enter PiP mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="content_description_pause">Pause</string>
     <string name="content_description_play">Play</string>
     <string name="content_description_random">Random</string>
+
+    <string name="another_pip_activity">Another Activity</string>
 </resources>
